--- a/app/src/main/res/layout/view_question.xml
+++ b/app/src/main/res/layout/view_question.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/custom_list_background"
+    android:background="@drawable/view_question_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -11,15 +11,14 @@
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    >
+    android:paddingRight="5dp">
 
     <TextView
         android:id="@+id/txt_question_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/title"
-        android:textColor="?attr/textColor"
+        android:textColor="@color/white"
         android:fontFamily="monospace"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -31,11 +30,11 @@
         android:id="@+id/txt_question_code"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:fontFamily="monospace"
         android:text="@string/description"
         android:textSize="12sp"
-        android:background="@color/blue_200"
+        android:background="@color/blue_700"
         android:layout_marginTop="5dp"
         android:paddingLeft="5dp"
         app:layout_constraintEnd_toEndOf="parent"
