--- a/app/src/main/res/layout/activity_question_result.xml
+++ b/app/src/main/res/layout/activity_question_result.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/view_question_background"
         android:text="@string/category_title"
-        android:textSize="26sp"
-        android:padding="10dp"
+        android:textSize="22sp"
+        android:padding="14dp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -25,7 +25,10 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
-        android:padding="30dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +138,12 @@
                 android:textColor="?attr/textColor"
                 android:textSize="16sp" />
         </LinearLayout>
-
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pie_chart_progress"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
