--- a/app/src/main/res/layout/activity_question_result.xml
+++ b/app/src/main/res/layout/activity_question_result.xml
@@ -21,28 +21,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
         android:paddingLeft="30dp"
-        android:paddingRight="30dp"
         android:paddingTop="15dp"
+        android:paddingRight="30dp"
         android:paddingBottom="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_go_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_category_title">
+
         <TextView
             android:id="@+id/txt_progress_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="@string/performance"
             android:textAlignment="center"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:textColor="?attr/textColor"
-            android:text="@string/performance" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,8 +58,8 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:padding="5dp"
-                app:tint="?attr/textColor"
-                app:srcCompat="@drawable/ic_note" />
+                app:srcCompat="@drawable/ic_note"
+                app:tint="?attr/textColor" />
 
             <TextView
                 android:id="@+id/txt_question_count"
@@ -68,19 +71,22 @@
                 android:textColor="?attr/textColor"
                 android:textSize="16sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/img_question_correct"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:padding="5dp"
-                app:tint="?attr/textColor"
-                app:srcCompat="@drawable/ic_check" />
+                app:srcCompat="@drawable/ic_check"
+                app:tint="?attr/textColor" />
+
             <TextView
                 android:id="@+id/txt_question_correct"
                 android:layout_width="wrap_content"
@@ -91,19 +97,22 @@
                 android:textColor="?attr/textColor"
                 android:textSize="16sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/img_question_wrong"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:padding="5dp"
-                app:tint="?attr/textColor"
-                app:srcCompat="@drawable/ic_close" />
+                app:srcCompat="@drawable/ic_close"
+                app:tint="?attr/textColor" />
+
             <TextView
                 android:id="@+id/txt_question_wrong"
                 android:layout_width="wrap_content"
@@ -114,6 +123,7 @@
                 android:textColor="?attr/textColor"
                 android:textSize="16sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -126,8 +136,9 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:padding="5dp"
-                app:tint="?attr/textColor"
-                app:srcCompat="@drawable/ic_skip" />
+                app:srcCompat="@drawable/ic_skip"
+                app:tint="?attr/textColor" />
+
             <TextView
                 android:id="@+id/txt_question_no_answer"
                 android:layout_width="wrap_content"
@@ -138,12 +149,22 @@
                 android:textColor="?attr/textColor"
                 android:textSize="16sp" />
         </LinearLayout>
+
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pie_chart_progress"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:textAlignment="center"
-            android:layout_height="match_parent"/>
+            android:textAlignment="center" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_go_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title_home"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
