--- a/app/src/main/res/layout/dialog_life.xml
+++ b/app/src/main/res/layout/dialog_life.xml
@@ -70,6 +70,7 @@
         android:drawableEnd="@drawable/ic_close"
         android:drawableTint="@color/white"
         android:text="@string/end_test"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
