--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/custom_list_category_background"
     tools:context=".ui.about.AboutFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,9 +20,9 @@
             android:id="@+id/img_logo"
             android:layout_width="96dp"
             android:layout_height="96dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/app_logo"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,17 +30,41 @@
             android:id="@+id/txt_app_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
             android:text="@string/app_name"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/layout_top_container"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_logo" />
+            app:layout_constraintStart_toEndOf="@+id/img_logo"
+            app:layout_constraintTop_toTopOf="@+id/img_logo" />
+
+        <TextView
+            android:id="@+id/txt_donate_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
+            android:text="@string/donation_title"
+            android:textAlignment="viewStart"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_logo"
+            app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:drawableEnd="@drawable/ic_heart"
+            android:text="@string/donate"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/txt_donate_title"
+            app:layout_constraintTop_toBottomOf="@+id/txt_donate_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
@@ -48,15 +73,17 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_top_container">
+        app:layout_constraintTop_toBottomOf="@+id/layout_top_container"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="SpeakableTextPresentCheck">
 
         <LinearLayout
             android:id="@+id/linear_layout_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:orientation="vertical"
+            android:padding="10dp"></LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
