--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -42,7 +42,7 @@
             android:progress="5" />
 
         <LinearLayout
-            android:layout_width="75dp"
+            android:layout_width="95dp"
             android:layout_height="35dp"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
@@ -56,12 +56,12 @@
 
             <TextView
                 android:id="@+id/txt_life"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="25dp"
                 android:gravity="center_vertical"
-                android:text="5"
+                android:text="10"
                 android:layout_marginLeft="3dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginRight="5dp"
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
@@ -70,10 +70,9 @@
                 android:id="@+id/btn_bookmark"
                 android:layout_width="30dp"
                 android:layout_height="32dp"
-
                 android:background="@drawable/bottom_round"
                 app:tint="@color/white"
-                android:layout_gravity="center|top"
+                android:layout_gravity="top|center"
                 android:src="@drawable/ic_bookmark_no"/>
         </LinearLayout>
     </LinearLayout>
