--- a/app/src/main/res/layout/dialog_credit.xml
+++ b/app/src/main/res/layout/dialog_credit.xml
@@ -2,59 +2,86 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:padding="20dp">
+    android:layout_gravity="center_horizontal">
 
     <TextView
-        android:id="@+id/txt_credit_title"
-        android:layout_width="wrap_content"
+        android:id="@+id/txt_dialog_title"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:text="@string/coins"
-        android:textColor="?attr/textColor"
-        android:textSize="22sp"
+        android:background="@drawable/view_question_background"
+        android:text="@string/coin_dialog_title"
+        android:textSize="20sp"
+        android:padding="5dp"
+        android:textAlignment="center"
         android:textStyle="bold"
-        android:textAllCaps="true"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/img_credit"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_credit_title"
-        app:layout_constraintStart_toEndOf="@+id/txt_credit_title"
-        app:layout_constraintTop_toTopOf="@+id/txt_credit_title"
-        app:srcCompat="@drawable/ic_coin" />
+    <LinearLayout
+        android:id="@+id/linear_layout_coin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title">
 
-    <TextView
-        android:id="@+id/txt_credit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="10"
-        android:layout_marginStart="5dp"
-        android:textAlignment="center"
-        android:textColor="?attr/textColor"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/img_credit"
-        app:layout_constraintStart_toEndOf="@+id/img_credit"
-        app:layout_constraintTop_toTopOf="@+id/img_credit" />
+        <TextView
+            android:id="@+id/txt_credit_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/coins"
+            android:textAllCaps="true"
+            android:textColor="?attr/textColor"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title" />
+
+        <ImageView
+            android:id="@+id/img_credit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_credit_title"
+            app:layout_constraintTop_toTopOf="@+id/txt_credit_title"
+            app:srcCompat="@drawable/ic_coin" />
+
+        <TextView
+            android:id="@+id/txt_credit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="10"
+            android:textAlignment="center"
+            android:textColor="?attr/textColor"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/img_credit"
+            app:layout_constraintStart_toEndOf="@+id/img_credit"
+            app:layout_constraintTop_toTopOf="@+id/img_credit" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_view_ad"
-        android:layout_width="0dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:drawableEnd="@drawable/ic_video"
         android:drawableTint="@color/white"
         android:text="@string/view_ad"
-        android:layout_marginTop="20dp"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/txt_credit"
-        app:layout_constraintStart_toStartOf="@+id/txt_credit_title"
-        app:layout_constraintTop_toBottomOf="@+id/img_credit" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout_coin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
