--- a/app/src/main/res/layout/activity_question_result.xml
+++ b/app/src/main/res/layout/activity_question_result.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,20 +21,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- TODO: on publish add real ad unit -->
+    <!-- real_id="ca-app-pub-1361000594268534/2976231090" -->
+    <!-- test_id="ca-app-pub-3940256099942544/6300978111" -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adViewScreenBanner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-1361000594268534/2976231090"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_category_title" />
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:orientation="vertical"
         android:paddingLeft="30dp"
-        android:paddingTop="15dp"
+        android:paddingTop="10dp"
         android:paddingRight="30dp"
         android:paddingBottom="15dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_go_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_category_title">
+        app:layout_constraintTop_toBottomOf="@+id/adViewScreenBanner">
 
         <TextView
             android:id="@+id/txt_progress_status"
