--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/layout_main_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -42,29 +43,29 @@
             android:progress="5" />
 
         <LinearLayout
-            android:layout_width="95dp"
+            android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/img_life"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                app:srcCompat="@drawable/ic_heart" />
+            <!--            <ImageView-->
+            <!--                android:id="@+id/img_life"-->
+            <!--                android:layout_width="25dp"-->
+            <!--                android:layout_height="25dp"-->
+            <!--                app:srcCompat="@drawable/ic_heart" />-->
 
-            <TextView
-                android:id="@+id/txt_life"
-                android:layout_width="30dp"
-                android:layout_height="25dp"
-                android:gravity="center_vertical"
-                android:text="10"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="5dp"
-                android:textSize="16sp"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+            <!--            <TextView-->
+            <!--                android:id="@+id/txt_life"-->
+            <!--                android:layout_width="30dp"-->
+            <!--                android:layout_height="25dp"-->
+            <!--                android:gravity="center_vertical"-->
+            <!--                android:text="10"-->
+            <!--                android:layout_marginLeft="3dp"-->
+            <!--                android:layout_marginRight="5dp"-->
+            <!--                android:textSize="16sp"-->
+            <!--                android:textColor="@color/white"-->
+            <!--                android:textStyle="bold" />-->
 
             <ImageButton
                 android:id="@+id/btn_bookmark"
@@ -72,10 +73,25 @@
                 android:layout_height="32dp"
                 android:background="@drawable/bottom_round"
                 app:tint="@color/white"
-                android:layout_gravity="top|center"
+                android:layout_gravity="left"
                 android:src="@drawable/ic_bookmark_no"/>
         </LinearLayout>
     </LinearLayout>
+
+    <!-- TODO: on publish add real ad unit -->
+    <!-- real_id="ca-app-pub-1361000594268534/9186416225" -->
+    <!-- test_id="ca-app-pub-3940256099942544/6300978111" -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adViewScreenBanner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-1361000594268534/9186416225"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -83,7 +99,7 @@
         app:layout_constraintBottom_toTopOf="@+id/layout_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/adViewScreenBanner">
 
         <LinearLayout
             android:id="@+id/linear_layout_question_container"
@@ -196,7 +212,7 @@
                 android:textColor="@color/white"
                 android:drawableTint="@color/white"
                 android:text="@string/skip"
-               />
+                />
             <TextView
                 android:id="@+id/txt_timer"
                 android:layout_width="match_parent"
@@ -213,5 +229,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
